2004-04-02  Mark Grondona <mgrondona@llnl.gov>

	* src/qsnet/Makfile.am : Need to link libqsw with libdl when not using 
	PAM. (Reported by Nicholas Henke <nic@clusterfs.com>)

2004-03-30  Mark Grondona <mgrondona@llnl.gov>

	* src/pdsh/dsh.c (_rsh_thread) : Remove calls to xfgets() and
	use internal pdsh buffering to line-buffer output data. (gnats:408)
	
	* src/pdsh/cbuf.c, src/pdsh/cbuf.h: Added.
	
	* src/common/xstring.c (xfgets, xfgets2) : Removed unused functions.
	
2004-03-23  Mark Grondona <mgrondona@llnl.gov>

	* src/pdsh/dsh.c (_wdog) : Fix bug in watchdog sleep (found
	by Al Chu <chu11@llnl.gov>).

	* src/pdsh/dsh.c (_rcp_thread, _rsh_thread): Set thread connect
	time before updating thread state to DSH_READING to avoid potential
	race in watchdog (found by Al Chu <chu11@llnl.gov>).

2004-03-15  Mark Grondona <mgrondona@llnl.gov>

	* src/pdsh/mod.c, src/pdsh/mod.h, src/pdsh/opt.c : Misc. doc and 
	other cosmetic changes suggested by Py Watson <py@llnl.gov>.

	* src/pdsh/mod_rcmd.c : Move "mrsh" module to top position in
	rcmd_rank[], making it the default whenever installed.
	
	* src/pdsh/dsh.c (_wdog) : Terminate watchdog if thread info
	has been freed.

2004-03-08  Mark Grondona <mgrondona@llnl.gov>

	* src/modules/sdr.c : Rewrite module so that -a, -i, and -v can be
	used independently of eachother and along with other node selection
	options.

	* src/modules/genders.c : Modified behavior of -a such that all 
	nodes are targeted =except= those with "pdsh_all_skip" attribute.
	New "-A" option provides old -a behavior. Added -F option to point
	pdsh to a non-default genders file.

	* src/modules/nodeattr.c : Added -A option and changed semantics
	of -a to match genders module.

2004-03-03  Mark Grondona <mgrondona@llnl.gov>

	* src/qsnet/qswutil.c (qsw_spawn_neterr_thr) : Dlopen libelan3.so 
	when needed on Elan3 systems for running the network error thread. 
	Allows single qshd/mqshd binary to run on Elan3 or Elan4.
